<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Techspardha</string>
   
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Competitions</item>
        <item >Lectures</item>
        <item >Exhibitions</item>
        <item >Informalz</item>
        <item >Musical Night</item>
        <item >Social Initiative</item>
        <item >Contact Us</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
        <string name="contact">Contact Us</string>
        <string name="c1">For Exhibitions, mail us at exhibitions@techspardha.org</string>
                <string name="c2">For Sponsorship, mail us at sp@techspardha.org</string>
                <string name="c3">For any general query, mail us at info@techspardha.org</string>
                
        <string name="lecture">Lecture Series</string>
<string name="l1">Lecture Series allow students to interact with the experienced and successful personalities. Guest Lectures are given by people from different professions and on different topics ranging from entrepreneurship, technical to social responsibilities. This time, a lot of personalities will be giving lectures.</string>

<string name="l2">Guest Lectures are an integral part of Techspardha. Cooperate head honchos and people from academia are invited to share their spectra of rich experiences and insights about the contemporary technology and management relevant horizons. These guest lectures serve as an ideal platform for the students to supplement their knowledge with the first hand perspective of some of the stalwarts of the industry, and also appreciate the differnt dimensions of handling the challenges that lie ahead. The guest lectures are followed by an interactive question and answer round, wherein the keen minds seek solutions to their doubts.</string>

<string name="l3">There is no entry fee to attend any Guest Lecture. You just need to carry valid Student Identity Card.</string>

<string name="l4">Keep checking Manager</string>
<string name="l5">Amrit Sarkar : +91-7206432987</string>

<string name="informalz">Informalz</string>
<string name="i1">The arrangement of music and dance provide the young minds a chance to enjoy with their friends. Numerous fun events like Amazing Race, Paper Dance, Photo Scavanger Hunt, Tug of War, Friends War, Darting, Slow Cycle Race, Gully Cricket take place and let the students to show their agile and fun side.</string>

<string name="i2">Not only it adds to the fun factor of the fest but also help to celebrate the spirit of competition. The fun at Informalz sends the message that the fight begins and ends in the arena itself.</string>

<string name="i3">There is not entry fee, registration is done on-the-spot.</string>
<string name="musical_night">Wildflower</string>
    <string name="m1">Next to the World of God , the noble art of Music is the greatest treasure in the world. - Martin Luther</string>
    <string name="m2">Those of you who want to dive in the deep ocean of music keep their spirits high for the last and most awaited musical eve of 2015. Wildflower is a msuical event in Techspardha where talented singers and artists perform and relax the tensions of technical events all day. It re-energises the people and prepare for them for the next awesome day at Techspardha.</string>
    <string name="m3">Manager</string>
    <string name="m4">Sahil Khurrana: +91-9034877142</string>
    <string name="m5">Shivam Gupta: +91-9034876700</string>
    <string name="m6">Saurabh Banerjee: +91-9017428446</string>

    <string name="m7">Family Fortune</string>
    <string name="m8">This is the most fun event centered on crowd interaction. It is totally based upon the intellect of a person as well as his luck. Random questions would be asked from the crowd having Top 10 answer choices. On the basis of their answers, they would be called up on stage and fun tasks would be given to them. The winner of this event would be decided by a luck question. Come prepared for Two Hours of Unlimited Fun, lots of Free Goodies</string>

    <string name="m9">Pro Nite</string>
    <string name="m10">After the day filled with mind-boggling events, thousands of people shift to the magnificent Open Air Theatre which hosts awesome performances by some of the best artists. Pro Nite is a great attraction for crowd. In the past, we have showcased performances like Shadow Act, Laser Show, Sand Art, Fire Show etc. </string>
   
    <string name="social_initiative">Social Initiative</string>


<string name="s1">Energy Conservation Drive!</string>
<string name="s2">In the digital era where even a 4 year old knows how to operate a mobile phone, use of electricity has become paramount. But a whopping 1.4 billion people remain deprived of the light that we happily leave turned on when not in use. We fail to realize that today’s ignorance can lead to darkness of tomorrow and a moment’s joy can cause unprecedented sorrow. Let us pledge to try our best to remain inspired to save electricity and turn off those hot switches for a bright future.</string>
<string name="s3">Only two out of 1609 cities in India get continuous water supply which is remorsefully low to even mention as a fact. If this world is a body then water is the blood that supports it. Water, the elixir of life, has the power to create and destroy too, and thus it must not be wasted and judiciously used. Let us strive not to convert grasslands of today into deserts of tomorrow.</string>
<string name="s4">This Techspardha we are determined to bring a change by inculcating a seed of awareness among people to save water and electricity. And we aim to achieve this with the help of ROOH, our social initiative partner. ROOH is a social society of NIT Kurukshetra which strives for social upliftment and development of society on the grounds of public responsibility.</string>

<string name="s5">Show me how I can save electricity.</string>

<string name="s6">Manager</string>
<string name="s7">Prudhvi: +91-9034693395 </string>
<string name="exhibition">Exhibition</string>
<string name="e1">Tech Expo</string>
<string name="e2">Exploration is the engine that drives innovation. Tech Expo is the fuel - motivated by practical approaches to some of the interesting engineering problems and igniting scientific minds. Tech Expo provides the students a platform to showcase their best hands on experiences over any engineering realm.</string>
<string name="e3">Register for Tech-Expo here, techspardha.org/techexpo</string>

<string name="e4">Manager</string>
<string name="e5">Shivam Gandhi : +91-8901286682</string>
<string name="e6">Praveen Tiwari : +91-8950444818</string>
<string name="e7">Exhibition(Main)</string>
<string name="e8">Exhibition is a platform to acquaint students with some of the contemporary technologies engineered by scientific and technical honchos. TechSpardha boasts of its association with several institutes of scientific research, as well as technological firms that display their finest technologies, crafter by their finest engineering technologies. The exhibitions are also graced by academicians, and are ardently attended by the faculty and the staff during the span of the fest.</string>
<string name="e9">Any of the exhibition can be attended free of cost. </string>
    <string name="action_settings">Settings</string>

</resources>
